--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<a-scene>
 			<a-assets>
 				<img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg" crossorigin="anonymous">
+
+				<a-asset-item id="ghost" src="assets/ghost.gltf"></a-asset-item>
 			</a-assets>
 
 			<a-sky src="#skyTexture" theta-length="90" radius="30"></a-sky>
@@ -29,6 +31,10 @@
 				position="0 0 0"
 				material="shader: flat; color: #424949">
 			</a-entity>
+
+			<a-entity gltf-model="#ghost" position="0 1.6 -10"></a-entity>
+			<a-entity gltf-model="#ghost" position="3 1.6 -10"></a-entity>
+			<a-entity gltf-model="#ghost" position="5 1.6 -10"></a-entity>
 		</a-scene>
 
 	</body>
