--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<a-assets>
 				<img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg" crossorigin="anonymous">
 
-				<a-asset-item id="ghost" src="assets/ghost.gltf"></a-asset-item>
+				<a-asset-item id="ghost" src="assets/ghost.gltf" scale="0.2 0.2 0.2"></a-asset-item>
 			</a-assets>
 
 			<a-sky src="#skyTexture" theta-length="90" radius="30"></a-sky>
