--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<a-assets>
 				<img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg" crossorigin="anonymous">
 
-				<a-asset-item id="ghost" src="assets/rubberduck/scene.gltf" scale="0.1 0.1 0.1"></a-asset-item>
+				<a-gltf-model id="ghost" src="assets/rubberduck/scene.gltf" scale="0.1 0.1 0.1"></a-gltf-model>
 			</a-assets>
 
 			<a-sky src="#skyTexture" theta-length="90" radius="30"></a-sky>
