--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-				<a-asset-item id="ghost" src="assets/rubberduck/scene.gltf" scale="0.2 0.2 0.2"></a-asset-item>
+				<a-asset-item id="ghost" src="../assets/rubberduck/scene.gltf" scale="0.2 0.2 0.2"></a-asset-item>
 			</a-assets>
 
 			<a-gltf-model src="#ghost"></a-gltf-model>
